# CODSOFT-c-

./: Makefile  README.md  library mng system.cpp.cpp  library_management_system  library_management_system.cpp  number_guessing_game  random guess.cpp  tic_tac_toe  tictoegame.cpp  to do.cpp  todo_manager
.github/workflows/: cpp-build.yml  desktop-release.yml  github-pages.yml
desktop_app/: CMakeLists.txt  Makefile  README.md  TESTING.md  bookdialog.cpp  bookdialog.h  bookmodel.cpp  bookmodel.h  build-windows.bat  build-windows.sh  build.sh  create-icon.py  database.cpp  database.h  launch_gui.sh  main.cpp  mainwindow.cpp  mainwindow.h  open_gui.sh  run_gui.sh  serve_gui.py  simple_demo.cpp  simple_gui.cpp  simple_server.py  updatedialog.cpp  updatedialog.h  web_gui.html
docs/: README.md  index.html
